feat: added nasic auth methods
