# cmd/main.go
@@ -7,6 +7,8 @@ import (
 
 	_ "richmond-api/docs"
 	h "richmond-api/internal/api/health"
+	"richmond-api/internal/api/user"
+	"richmond-api/internal/db"
 )
 
 // @title richmond-api
@@ -15,8 +17,24 @@ import (
 func main() {
 	r := gin.Default()
 
+	// Connect to database
+	conn, err := db.Connect()
+	if err != nil {
+		panic("failed to connect to database")
+	}
+	queries := db.New(conn)
+
+	// Initialize handlers
+	userHandler := user.NewUserHandler(queries)
+
 	r.GET("/health", h.Health)
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	// User API
+	v1 := r.Group("/api/v1/user")
+	v1.POST("/new", userHandler.Create)
+	v1.POST("/login", userHandler.Login)
+	v1.GET("", user.AuthMiddleware(queries), userHandler.Get)
 
 	r.Run(":8080")
 }
